<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CoffeeActivity" android:background="#C17C71">
    <Button
            android:text="@string/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderButton"
            android:onClick="storeOrder"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp" android:layout_marginBottom="42dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
            android:text="@string/cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cream"
            android:onClick="creamClick"
            app:layout_constraintStart_toStartOf="@+id/size" android:layout_marginTop="23dp"
            android:layout_marginLeft="74dp" android:layout_marginStart="74dp"
            app:layout_constraintTop_toBottomOf="@+id/size"/>
    <CheckBox
            android:text="@string/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/milk"
            android:onClick="milkClick"
            app:layout_constraintStart_toStartOf="@+id/cream" android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/cream"/>
    <CheckBox
            android:text="@string/whippedcream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/whippedcream"
            android:onClick="whippedcreamClick"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/size" android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp" app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
            android:text="@string/caramel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/caramel"
            android:onClick="caramelClick"
            app:layout_constraintStart_toStartOf="@+id/whippedcream" android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/whippedcream"/>
    <CheckBox
            android:text="@string/syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/syrup"
            android:onClick="syrupClick"
            app:layout_constraintStart_toStartOf="@+id/milk" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/milk"/>
    <TextView
            android:text="@string/total"
            android:layout_width="70dp"
            android:layout_height="29dp" android:id="@+id/txt"
            android:layout_marginTop="104dp"
            app:layout_constraintTop_toBottomOf="@+id/caramel" android:layout_marginBottom="104dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="@+id/orderButton"
            android:layout_marginEnd="67dp" android:layout_marginRight="67dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/size"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/quantity"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/quantity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="342dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="189dp" app:srcCompat="@drawable/coffee" android:id="@+id/imageView"
            android:contentDescription="@string/coffeeImage"
            android:layout_marginTop="143dp" android:layout_marginBottom="143dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/quantity" android:layout_marginLeft="120dp"
            app:layout_constraintBottom_toBottomOf="@+id/whippedcream" android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp" android:layout_marginRight="120dp"/>
    <TextView
            android:text="@string/orderCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/imageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>