<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#C17C71">
    <ImageView
            android:layout_width="166dp"
            android:layout_height="0dp" app:srcCompat="@drawable/coffee" android:id="@+id/coffeeImage"
            android:contentDescription="@string/ContentDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"/>
    <ImageView
            android:layout_width="166dp"
            android:layout_height="166dp" app:srcCompat="@drawable/donut" android:id="@+id/imageView2"
            android:contentDescription="@string/ContentDescription"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="141dp"/>
    <Button
            android:text="@string/coffeeText"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColorHighlight="#000000" android:background="#774435" android:textColor="#E3D7D7"
            android:id="@+id/button5"
            android:onClick="coffeeActivityClick"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/coffeeImage" app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp" android:layout_marginEnd="96dp" android:layout_marginRight="96dp"/>
    <Button
            android:text="@string/donutText"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/button2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#774435" android:textColor="#e3D7D7"
            app:layout_constraintStart_toEndOf="@+id/button5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button5" app:layout_constraintBottom_toBottomOf="@+id/button5"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:onClick="donutActivityClick"/>
    <TextView
            android:text="@string/RUCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#5E2B2B"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="26dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/OrderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#774435" android:textColor="#e3D7D7"
            android:onClick="orderActivityClick"
            app:layout_constraintTop_toTopOf="@+id/button4" app:layout_constraintBottom_toBottomOf="@+id/button4"
            android:layout_marginEnd="19dp" android:layout_marginRight="19dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"/>
    <Button
            android:text="@string/StoreOrdersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#774435" android:textColor="#e3D7D7"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="storeOrdersActivityClick"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/order" android:id="@+id/imageView3"
            android:contentDescription="@string/ContentDescription"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintEnd_toStartOf="@+id/imageView4"
            android:layout_marginBottom="56dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="7dp" android:layout_marginStart="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/button3" android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="153dp" app:srcCompat="@drawable/storeorder" android:id="@+id/imageView4"
            android:contentDescription="@string/ContentDescription"
            android:layout_marginTop="51dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>