<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity" android:background="#C17C71">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subTotal"
            app:layout_constraintStart_toStartOf="@+id/salesTax" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="293dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salesTax"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/subTotal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="45dp" app:layout_constraintTop_toBottomOf="@+id/salesTax"/>
    <TextView
            android:text="@string/StoreOrdersText"
            android:layout_width="232dp"
            android:layout_height="46dp"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:layout_marginEnd="63dp"
            android:layout_marginRight="63dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ListView
            android:layout_width="385dp"
            android:layout_height="0dp"
            android:id="@+id/listView"
            android:layout_marginTop="51dp"
            app:layout_constraintEnd_toStartOf="@+id/subTotal" android:layout_marginBottom="47dp"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/subTotal"
            app:layout_constraintBottom_toBottomOf="@+id/subTotal"/>
    <TextView
            android:text="@string/SubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/listView"/>
    <TextView
            android:text="@string/SalesTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="45dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="45dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
</androidx.constraintlayout.widget.ConstraintLayout>