<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="#C17C71"
        tools:context=".DonutOrderActivity">
    <TextView
            android:text="@string/OrderingDonuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="654dp"
            android:layout_marginEnd="43dp" android:layout_marginRight="43dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="43dp" android:layout_marginStart="43dp" android:textColor="#5E2B2B"/>
    <ImageView
            android:layout_width="134dp"
            android:layout_height="113dp" app:srcCompat="@drawable/glazed" android:id="@+id/imageView5"
            android:contentDescription="@string/ContentDescription"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/glazed" app:layout_constraintEnd_toStartOf="@+id/imageView7"
            android:layout_marginEnd="76dp" android:layout_marginRight="76dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/flavor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/glazed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#774435"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" android:layout_marginBottom="46dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView6" app:layout_constraintEnd_toStartOf="@+id/blueberry"
            android:layout_marginEnd="111dp" android:layout_marginRight="111dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="43dp"
            android:layout_marginStart="43dp" app:layout_constraintHorizontal_bias="0.0"
    />
    <ImageView
            android:layout_width="147dp"
            android:layout_height="137dp" app:srcCompat="@drawable/jelly" android:id="@+id/imageView6"
            android:contentDescription="@string/ContentDescription"
            app:layout_constraintTop_toBottomOf="@+id/glazed" app:layout_constraintBottom_toTopOf="@+id/jelly"
            app:layout_constraintEnd_toStartOf="@+id/imageView8" android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="5dp" android:layout_marginStart="5dp"/>
    <Button
            android:text="@string/flavor2"
            android:layout_width="89dp"
            android:layout_height="48dp" android:id="@+id/jelly"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#774435"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="140dp" app:layout_constraintEnd_toStartOf="@+id/imageView9"
            android:layout_marginEnd="56dp" android:layout_marginRight="56dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"/>
    <ImageView
            android:layout_width="141dp"
            android:layout_height="110dp" app:srcCompat="@drawable/blueberry" android:id="@+id/imageView7"
            android:contentDescription="@string/ContentDescription"
            android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/blueberry"
            android:layout_marginEnd="43dp" android:layout_marginRight="43dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/flavor3"
            android:layout_width="102dp"
            android:layout_height="53dp" android:id="@+id/blueberry"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#774435" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView8" android:layout_marginEnd="67dp"
            android:layout_marginRight="67dp" app:layout_constraintEnd_toEndOf="parent"
    />
    <ImageView
            android:layout_width="142dp"
            android:layout_height="138dp" app:srcCompat="@drawable/bostoncream" android:id="@+id/imageView8"
            android:contentDescription="@string/ContentDescription"
            android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/blueberry"
            android:layout_marginLeft="75dp" android:layout_marginStart="75dp"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
    />
    <Button
            android:text="@string/flavor4"
            android:layout_width="114dp"
            android:layout_height="55dp" android:id="@+id/bostonCream"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="53dp"
            android:layout_marginEnd="28dp" android:layout_marginRight="28dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="219dp" android:layout_marginStart="219dp" android:background="#774435"
            app:layout_constraintHorizontal_bias="0.46" app:layout_constraintVertical_bias="0.0"
    />
    <ImageView
            android:layout_width="144dp"
            android:layout_height="196dp" app:srcCompat="@drawable/strawberry" android:id="@+id/imageView9"
            app:layout_constraintBottom_toTopOf="@+id/strawberry"
            android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/bostonCream"
            android:layout_marginEnd="93dp" android:layout_marginRight="93dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="22dp" android:layout_marginStart="22dp"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            android:contentDescription="@string/ContentDescription"/>
    <Button
            android:text="@string/flavor5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/strawberry"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#774435" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="@+id/imageView9"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>